--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,24 @@ Hollywood Reporter/Hollywood Reporter July 21, 2021.pdf
 Hollywood Reporter/Hollywood Reporter Aug. 23, 2021.pdf
 Hollywood Reporter/Hollywood Reporter Aug. 11, 2021.pdf
 Hollywood Reporter/Hollywood Reporter Aug. 5, 2021.pdf
+Hollywood Reporter/Report/eleven/pdf/Hollywood Reporter Aug. 5, 2021.pdf
+Hollywood Reporter/Report/eleven/pdf/Hollywood Reporter Aug. 11, 2021.pdf
+Hollywood Reporter/Report/eleven/pdf/Hollywood Reporter Aug. 23, 2021.pdf
+Hollywood Reporter/Report/eleven/pdf/Hollywood Reporter July 21, 2021.pdf
+Hollywood Reporter/Report/eleven/pdf/Hollywood Reporter June 17, 2021.pdf
+Hollywood Reporter/Report/eleven/pdf/Hollywood Reporter June 30, 2021.pdf
+Hollywood Reporter/Report/eleven/pdf/Hollywood Reporter Nov. 3, 2021.pdf
+Hollywood Reporter/Report/eleven/pdf/Hollywood Reporter Nov. 10, 2021.pdf
+Hollywood Reporter/Report/eleven/pdf/Hollywood Reporter Oct. 27, 2021.pdf
+Hollywood Reporter/Report/eleven/pdf/Hollywood Reporter Sept. 8, 2021.pdf
+Hollywood Reporter/Report/eleven/pdf/Hollywood Reporter Sept. 22, 2021.pdf
+pdf/PARKS&REMEDIATION.pdf.pdf
+Hollywood Reporter/Report/eleven/pdf/Hollywood Reporter Oct. 27, 2021-nouns.txt
+Hollywood Reporter/Report/eleven/pdf/Hollywood Reporter Nov. 10, 2021-nouns.txt
+Hollywood Reporter/Report/eleven/pdf/Hollywood Reporter Nov. 3, 2021-nouns.txt
+Hollywood Reporter/Report/eleven/pdf/Hollywood Reporter June 30, 2021-nouns.txt
+Hollywood Reporter/Report/eleven/pdf/Hollywood Reporter June 17, 2021-nouns.txt
+Hollywood Reporter/Report/eleven/pdf/Hollywood Reporter July 21, 2021-nouns.txt
+Hollywood Reporter/Report/eleven/pdf/Hollywood Reporter Aug. 23, 2021-nouns.txt
+Hollywood Reporter/Report/eleven/pdf/Hollywood Reporter Aug. 11, 2021-nouns.txt
+Hollywood Reporter/Report/eleven/pdf/Hollywood Reporter Aug. 5, 2021-nouns.txt
